-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11
-
Component/s: hotspot
-
b20
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8206802 | 12 | Nils Eliasson | P3 | Resolved | Fixed | team |
| JDK-8206579 | 11.0.1 | Nils Eliasson | P3 | Resolved | Fixed | b01 |
The safepoint node belonging to a OuterStripMinedLoopEnd is removed making us fail on the assert.
I have only been able to reproduce this running with -XX:+ZGC, but no barriers are involved, suggesting that it could happen with any GC.
I have only been able to reproduce this running with -XX:+ZGC, but no barriers are involved, suggesting that it could happen with any GC.
- backported by
-
JDK-8206579 assert(c->Opcode() == Op_SafePoint) failed: broken outer loop
-
- Resolved
-
-
JDK-8206802 assert(c->Opcode() == Op_SafePoint) failed: broken outer loop
-
- Resolved
-
- relates to
-
JDK-8186027 C2: loop strip mining
-
- Resolved
-