8205107: assert(c->Opcode() == Op_SafePoint) failed: broken outer loop

Don't remove safepoint belonging to OuterStripMinedLoopEndNode

Reviewed-by: kvn